# crabrolls

./: .gitignore  Cargo.toml  README.md
.github/workflows/: CD-docs.yml
docs/: .gitignore  astro.config.ts  ec.config.mjs  package.json
docs/src/content/docs/: index.mdx
docs/src/content/docs/advanced/: unit-tests.mdx
docs/src/content/docs/getting-started/: new-project.mdx
docs/src/content/docs/getting-started/examples/: echo.mdx  json.mdx  super-honeypot.mdx  wallet-abstraction.mdx
docs/src/content/docs/overview/: introduction.mdx
docs/src/content/docs/testing/: usage.mdx
docs/src/content/docs/usage/: deposits.mdx  environment.mdx  unit-tests.mdx  utils-and-macros.mdx
docs/src/styles/: custom.css
examples/: blog.rs  deposit.rs  echo.rs  super_honeypot.rs  wallet_abstraction.rs
src/: lib.rs
src/core/: address.rs  application.rs  context.rs  environment.rs  mod.rs  testing.rs  types.rs
src/core/contracts/: erc1155.rs  erc20.rs  erc721.rs  ether.rs  mod.rs
src/types/: address.rs  address_book.rs  machine.rs  mod.rs  testing.rs
src/utils/: abi.rs  address_book.rs  macros.rs  mod.rs  parsers.rs  requests.rs  units.rs
