[package]
name = "crabrolls"
version = "1.0.0"
edition = "2021"
author = "ViniciosLugli <vinicioslugli@gmail.com>"
description = "High level framework for Rust-based dapps on Cartesi machines"
repository = "https://github.com/crabrolls-cartesi/crabrolls"
include = ["**/*.rs", "Cargo.toml"]
license = "Apache-2.0"
license-file = "LICENSE"
keywords = [
	"cartesi",
	"dapp",
	"blockchain",
	"rust",
	"framework",
	"smart-contract",
]

[dependencies]
reqwest = { version = "0.12.4", features = ["json", "rustls-tls"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = "0.7.11"
ethers = "2.0.14"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
log = "0.4.21"
pretty_env_logger = "0.5.0"
