[package]
name = "crabrolls"
version = "1.2.0"
edition = "2021"
description = "High level framework for Rust-based dapps on Cartesi machines"
repository = "https://github.com/crabrolls-cartesi/crabrolls"
include = ["**/*.rs", "Cargo.toml"]
license-file = "LICENSE"
keywords = ["cartesi", "dapp", "blockchain", "rust", "high-level"]

[dependencies]
ureq = { version = "2.10.0", features = ["json", "charset"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
log = "0.4.22"
pretty_env_logger = "0.5.0"
async-std = { version = "1.12.0", features = ["attributes", "std"] }
hex = "0.4.3"
